--- a/index.html
+++ b/index.html
@@ -196,10 +196,14 @@
           </h2>
           <div class="service__content">
             <ul class="service__list">
-              <li id="Health" class="service__item service__item__current">Health Care</li>
+              <li id="Health" class="service__item service__item__current">
+                Health Care
+              </li>
               <li id="Food" class="service__item">Food Services</li>
               <li id="Construction" class="service__item">Construction</li>
-              <li id="Engineering" class="service__item">Engineering Solutions</li>
+              <li id="Engineering" class="service__item">
+                Engineering Solutions
+              </li>
               <li id="Fintech" class="service__item">Fintech</li>
               <li id="Online" class="service__item">Online Stores</li>
               <li id="Personal" class="service__item">Personal Trainers</li>
@@ -210,7 +214,10 @@
               <li id="Furniture" class="service__item">Furniture</li>
               <li id="Pet" class="service__item">Pet Services</li>
             </ul>
-            <ul id="HealthList" class="service__content__list service__content__list__active">
+            <ul
+              id="HealthList"
+              class="service__content__list service__content__list__active"
+            >
               <li class="service__content__item">
                 <h3 class="service__content__title">What is GitHub Copilot?</h3>
                 <p class="service__content__text">
@@ -263,7 +270,7 @@
                 </p>
               </li>
             </ul>
-            <ul id="FoodList" class="service__content__list ">
+            <ul id="FoodList" class="service__content__list">
               <li class="service__content__item">
                 <h3 class="service__content__title">What is GitHub Copilot?</h3>
                 <p class="service__content__text">
@@ -276,17 +283,94 @@
                   Studio Code, Neovim, and the JetBrains suite of IDEs.
                 </p>
               </li>
-              </ul>
-              <ul id="ConstructionList" class="service__content__list ">
-                <li class="service__content__item">
-                  <h3 class="service__content__title">What is GitHub Copilot?</h3>
-                  <p class="service__content__text">
-                    Gjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj AI system created by OpenAI. The GitHub Copilot
-                    technical preview is available as an extension for Visual
-                    Studio Code, Neovim, and the JetBrains suite of IDEs.
-                  </p>
-                </li>
-                </ul>
+            </ul>
+            <ul id="ConstructionList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text">
+                  Gjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj
+                  AI system created by OpenAI. The GitHub Copilot technical
+                  preview is available as an extension for Visual Studio Code,
+                  Neovim, and the JetBrains suite of IDEs.
+                </p>
+              </li>
+            </ul>
+            <ul id="EngineeringList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text">
+                  Gjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj
+                  AI system created by OpenAI. The GitHub Copilot technical
+                  preview is available as an extension for Visual Studio Code,
+                  Neovim, and the JetBrains suite of IDEs.
+                </p>
+              </li>
+            </ul>
+            <ul id="FintechList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+            <ul id="OnlineList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+            <ul id="PersonalList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+            <ul id="RealList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+            <ul id="LawyersList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+            <ul id="LocalList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+            <ul id="RecreationList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+            <ul id="FurnitureList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+            <ul id="PetList" class="service__content__list">
+              <li class="service__content__item">
+                <h3 class="service__content__title">What is GitHub Copilot?</h3>
+                <p class="service__content__text"></p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="competitors">
+        <div class="competitors__container">
+          <div class="competitors__baner">
+            <h2 class="competitors_title">Don't let your competitors get a greater power </h2>
+            <p class="competitors__text">Web development and digital marketing
+              is now readily available for your business with <span>TrustPix</span>.
+              On a turnkey basis. Easier than ever.</p>
+            <button class="competitors__btn">Explore Benefits</button>
           </div>
         </div>
       </section>
@@ -310,20 +394,21 @@
     </div>
     <script>
       const ulServ = document.querySelector(".service__list");
-     
-      let curentItem = ulServ.addEventListener('click', (e) => {
+
+      let curentItem = ulServ.addEventListener("click", (e) => {
         let currentLi = document.querySelector(".service__item__current");
-        let currentUL = document.querySelector(".service__content__list__active")
+        let currentUL = document.querySelector(
+          ".service__content__list__active"
+        );
         let clickedId = e.target.id;
         let activatedEl = document.querySelector(`#${clickedId}`);
         let activatedUL = document.querySelector(`#${clickedId}List`);
-        currentLi.classList.remove('service__item__current');
-        currentUL.classList.remove('.service__content__list__active');
-        activatedEl.classList.add('service__item__current');
-        activatedUL.classList.add('.service__content__list__active');
-        return 
+        currentLi.classList.remove("service__item__current");
+        currentUL.classList.remove("service__content__list__active");
+        activatedEl.classList.add("service__item__current");
+        activatedUL.classList.add("service__content__list__active");
+        return console.log(activatedUL);
       });
-
     </script>
     <script>
       const openVideo = () => {
