--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             height="503px"
           />
           <div class="marginator">
+            <img class="btnImg" src="./images/btnPlay.png" alt="" />
             <div class="over_play" onclick="openVideo()"></div>
             <div class="p-wrapper">
               <div class="layer layer--overlay"></div>
@@ -62,7 +63,7 @@
                 <div class="preview__inner">
                   <a class="player">
                     <div class="item">
-                      <span class="item__play"></span>
+                      <span class="item__play"> </span>
                     </div>
                   </a>
                 </div>
@@ -382,6 +383,153 @@
             <button class="competitors__btn">Explore Benefits</button>
             <div class="banner__overlay"></div>
           </div>
+        </div>
+      </section>
+      <section class="questions">
+        <div class="questions__container">
+          <div class="questions__text-contain">
+            <h2 class="questions__title">Frequently asked questions</h2>
+            <p class="questions__text">
+              We realize that the last thing that a small business or startup
+              can afford is an additional $10,000 investment for a website
+              before even opening its doors, so here are few questions you may
+              have.
+            </p>
+          </div>
+          <ul class="questions__list">
+            <li class="questions__item">
+              <div class="questions__item__btn-contain">
+                <h3 class="questions__item__text">How does it work?</h3>
+                <button class="questions__item__btn">
+                  <img class="questions__item__btn__icon"
+                    width="34px"
+                    height="34px"
+                   src="./images/Group 99.svg"></img>
+                  
+                </button>
+              </div>
+              <p class="questions__item__content">
+                Regardless of the size of your website project and the cost,
+                Digital Glue will offer you the choice to pay for your website
+                over three years. Your new website will still go live after a
+                typical 12-14 week project timeline, but you have the option to
+                spread payment over a three year period.
+              </p>
+            </li>
+            <li class="questions__item">
+              <div class="questions__item__btn-contain">
+                <h3 class="questions__item__text">
+                  Are there any large upfront costs?
+                </h3>
+                <button class="questions__item__btn">
+                  <img class="questions__item__btn__icon"
+                    width="34px"
+                    height="34px"
+                   src="./images/Group 99.svg"></img>
+                </button>
+              </div>
+              <p class="questions__item__content">
+                There are no surprise upfront costs. All we ask in the first
+                month is a one-off additional fee of 100% your first monthly
+                payment. This is to cover our time and associated costs to set
+                up the contract, billing schedule and project planning.
+              </p>
+            </li>
+            <li class="questions__item">
+              <div class="questions__item__btn-contain">
+                <h3 class="questions__item__text">
+                  Why should I сhoose you TrustPix?
+                </h3>
+                <button class="questions__item__btn">
+                  <img class="questions__item__btn__icon"
+                    width="34px"
+                    height="34px"
+                   src="./images/Group 99.svg"></img>
+                </button>
+              </div>
+              <p class="questions__item__content">
+                Selecting a web design company can be a difficult task because
+                of complexity, and also some companies add unexpected hidden
+                costs throughout the process. With TrustPix you could get
+                everything you need, including marketing services, for a
+                fraction of the regular industry price.
+              </p>
+            </li>
+            <li class="questions__item">
+              <div class="questions__item__btn-contain">
+                <h3 class="questions__item__text">
+                  Will we be able to edit our website?
+                </h3>
+                <button class="questions__item__btn">
+                  <img class="questions__item__btn__icon"
+                    width="34px"
+                    height="34px"
+                   src="./images/Group 99.svg"></img>
+                </button>
+              </div>
+              <p class="questions__item__content">
+                Yes. But why should you? Unlimited edits are included in our
+                monthly plans. Simply shoot us a message, and we'll make your
+                updates for you.
+              </p>
+            </li>
+            <li class="questions__item">
+              <div class="questions__item__btn-contain">
+                <h3 class="questions__item__text">Will we own our website?</h3>
+                <button class="questions__item__btn">
+                  <img class="questions__item__btn__icon"
+                    width="34px"
+                    height="34px"
+                   src="./images/Group 99.svg"></img>
+                </button>
+              </div>
+              <p class="questions__item__content">
+                Yes! Unlike Wix and other DIY website builders, you own your
+                website. Should you decide to cancel your subscription further
+                down the road, we can export your data and we'll even set it up
+                on your new host if you need us to. Plus, you own all rights to
+                the provided designs and content.
+              </p>
+            </li>
+            <li class="questions__item">
+              <div class="questions__item__btn-contain">
+                <h3 class="questions__item__text">
+                  What is mean by unlimited?
+                </h3>
+                <button class="questions__item__btn">
+                  <img class="questions__item__btn__icon"
+                    width="34px"
+                    height="34px"
+                   src="./images/Group 99.svg"></img>
+                </button>
+              </div>
+              <p class="questions__item__content">
+                Yes! Unlike Wix and other DIY website builders, you own your
+                website. Should you decide to cancel your subscription further
+                down the road, we can export your data and we'll even set it up
+                on your new host if you need us to. Plus, you own all rights to
+                the provided designs and content.
+              </p>
+            </li>
+            <li class="questions__item">
+              <div class="questions__item__btn-contain">
+                <h3 class="questions__item__text">
+                  Will we be locked into a contract?
+                </h3>
+                <button class="questions__item__btn">
+                  <img class="questions__item__btn__icon"
+                    width="34px"
+                    height="34px"
+                   src="./images/Group 99.svg"></img>
+                </button>
+              </div>
+              <p class="questions__item__content">
+                No. Our plans are paid monthly, with the first payment delayed
+                30 days from when you complete the activation process. We make
+                it simple to start and stop your service at any time.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
