--- a/index.html
+++ b/index.html
@@ -14,36 +14,38 @@
   <body>
     <header class="page-header">
       <div class="page-header__container">
-        <a href="./index.html" class="logo">
-          <svg class="logo__icon" width="45px" height="45px">
-            <use href="./images/icon.svg#icon-logo" width="45px"></use>
-          </svg>
-          TrustPix
-        </a>
+       
+        <div class="page-header__main-contain">
+          <a href="./index.html" class="logo">
+            <svg class="logo__icon" width="45" height="45">
+              <use href="./images/icon.svg#icon-logo"></use>
+            </svg>
+           TrustPix
+          </a>
 
-        <h1 class="page-header__title">
-          One website. One monthly cost.<br />
-          <span class="word1"> The whole nine yards </span>
-          <span class="word1"> Always close by</span>
-          <span class="word1"> Smart, efficient and clean</span>
-        </h1>
-
-        <p class="page-header__text">
-          Pay one monthly amount to have the website you desire, 24/7 support
-          plus everything you need for marketing as long as you need. No
-          contract. No worries.
-        </p>
+          <div class="rotating-text">
+            <h1 class="page-header__title">One website. One monthly cost.</h1>
+            <p>
+              <span class="word">The whole nine yards</span>
+              <span class="word">Always close by</span>
+              <span class="word">Smart, efficient and clean</span>
+            </p>
+          </div>
+          <p class="page-header__text">
+            Pay one monthly amount to have the website you desire, 24/7 support
+            plus everything you need for marketing as long as you need. No
+            contract. No worries.
+          </p>
+        </div>
       </div>
-    </header>
-    <main>
-      <section class="loading illustration">
+      <div class="loading illustration layers" data-speed="700">
         <div class="illustr">
           <img
             class="pleyer_img"
             src="./images/video1.png"
             alt="video"
-            width="888px"
-            height="503px"
+            width="888"
+            height="503"
           />
           <div class="marginator">
             <img class="btnImg" src="./images/btnPlay.png" alt="" />
@@ -71,7 +73,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </header>
+
+    <main>
       <section class="description">
         <div class="description__container">
           <div class="description__first">
@@ -79,8 +84,8 @@
               class="description__point-first"
               src="./images/points2.svg"
               alt=""
-              width="420px"
-              height="247px"
+              width="420"
+              height="247"
             />
             <!-- <svg class="description__point-first" width="16px" height="12px">
                <use href="./images/points1.svg"></use>
@@ -105,11 +110,7 @@
           <div class="description__list-contain">
             <ul class="description__list">
               <li class="description__item">
-                <svg
-                  class="description__item__picture"
-                  width="87px"
-                  heigth="101px"
-                >
+                <svg class="description__item__picture" width="87" height="101">
                   <use href="./images/icon.svg#icon-Group1"></use>
                 </svg>
                 <h3 class="description__item__title">
@@ -120,11 +121,7 @@
                 </p>
               </li>
               <li class="description__item">
-                <svg
-                  class="description__item__picture"
-                  width="87px"
-                  heigth="101px"
-                >
+                <svg class="description__item__picture" width="87" height="101">
                   <use href="./images/icon.svg#icon-Group2"></use>
                 </svg>
                 <h3 class="description__item__title">
@@ -135,11 +132,7 @@
                 </p>
               </li>
               <li class="description__item">
-                <svg
-                  class="description__item__picture"
-                  width="87px"
-                  heigth="101px"
-                >
+                <svg class="description__item__picture" width="87" height="101">
                   <use href="./images/icon.svg#icon-Group3"></use>
                 </svg>
                 <h3 class="description__item__title">
@@ -151,11 +144,7 @@
                 </p>
               </li>
               <li class="description__item">
-                <svg
-                  class="description__item__picture"
-                  width="90px"
-                  heigth="106px"
-                >
+                <svg class="description__item__picture" width="90" height="106">
                   <use href="./images/icon.svg#icon-Group4"></use>
                 </svg>
                 <h3 class="description__item__title">Unlimited updates</h3>
@@ -165,11 +154,7 @@
                 </p>
               </li>
               <li class="description__item">
-                <svg
-                  class="description__item__picture"
-                  width="87px"
-                  heigth="101px"
-                >
+                <svg class="description__item__picture" width="87" height="101">
                   <use href="./images/icon.svg#icon-Group5"></use>
                 </svg>
                 <h3 class="description__item__title">Comprehensiveness</h3>
@@ -179,11 +164,7 @@
                 </p>
               </li>
               <li class="description__item">
-                <svg
-                  class="description__item__picture"
-                  width="87px"
-                  heigth="101px"
-                >
+                <svg class="description__item__picture" width="87" height="101">
                   <use href="./images/icon.svg#icon-Group6"></use>
                 </svg>
                 <h3 class="description__item__title">Cancel anytime</h3>
@@ -381,9 +362,9 @@
               Easier than ever.
             </p>
             <button class="competitors__btn">Explore Benefits</button>
-            <div class="banner__overlay"></div>
           </div>
         </div>
+        <div class="banner__overlay"></div>
       </section>
       <section class="questions">
         <div class="questions__container">
@@ -401,11 +382,13 @@
               <div class="questions__item__btn-contain">
                 <h3 class="questions__item__text">How does it work?</h3>
                 <button class="questions__item__btn">
-                  <img class="questions__item__btn__icon"
-                    width="34px"
-                    height="34px"
-                   src="./images/Group 99.svg"></img>
-                  
+                  <img
+                    class="questions__item__btn__icon"
+                    width="34"
+                    height="34"
+                    src="./images/Group_99.svg"
+                    alt="btn"
+                  />
                 </button>
               </div>
               <p class="questions__item__content">
@@ -422,10 +405,13 @@
                   Are there any large upfront costs?
                 </h3>
                 <button class="questions__item__btn">
-                  <img class="questions__item__btn__icon"
-                    width="34px"
-                    height="34px"
-                   src="./images/Group 99.svg"></img>
+                  <img
+                    class="questions__item__btn__icon"
+                    width="34"
+                    height="34"
+                    src="./images/Group_99.svg"
+                    alt="btn"
+                  />
                 </button>
               </div>
               <p class="questions__item__content">
@@ -441,10 +427,13 @@
                   Why should I сhoose you TrustPix?
                 </h3>
                 <button class="questions__item__btn">
-                  <img class="questions__item__btn__icon"
-                    width="34px"
-                    height="34px"
-                   src="./images/Group 99.svg"></img>
+                  <img
+                    class="questions__item__btn__icon"
+                    width="34"
+                    height="34"
+                    src="./images/Group_99.svg"
+                    alt="btn"
+                  />
                 </button>
               </div>
               <p class="questions__item__content">
@@ -461,10 +450,13 @@
                   Will we be able to edit our website?
                 </h3>
                 <button class="questions__item__btn">
-                  <img class="questions__item__btn__icon"
-                    width="34px"
-                    height="34px"
-                   src="./images/Group 99.svg"></img>
+                  <img
+                    class="questions__item__btn__icon"
+                    width="34"
+                    height="34"
+                    src="./images/Group_99.svg"
+                    alt="btn"
+                  />
                 </button>
               </div>
               <p class="questions__item__content">
@@ -477,10 +469,13 @@
               <div class="questions__item__btn-contain">
                 <h3 class="questions__item__text">Will we own our website?</h3>
                 <button class="questions__item__btn">
-                  <img class="questions__item__btn__icon"
-                    width="34px"
-                    height="34px"
-                   src="./images/Group 99.svg"></img>
+                  <img
+                    class="questions__item__btn__icon"
+                    width="34"
+                    height="34"
+                    src="./images/Group_99.svg"
+                    alt="btn"
+                  />
                 </button>
               </div>
               <p class="questions__item__content">
@@ -497,10 +492,13 @@
                   What is mean by unlimited?
                 </h3>
                 <button class="questions__item__btn">
-                  <img class="questions__item__btn__icon"
-                    width="34px"
-                    height="34px"
-                   src="./images/Group 99.svg"></img>
+                  <img
+                    class="questions__item__btn__icon"
+                    width="34"
+                    height="34"
+                    src="./images/Group_99.svg"
+                    alt="btn"
+                  />
                 </button>
               </div>
               <p class="questions__item__content">
@@ -517,10 +515,13 @@
                   Will we be locked into a contract?
                 </h3>
                 <button class="questions__item__btn">
-                  <img class="questions__item__btn__icon"
-                    width="34px"
-                    height="34px"
-                   src="./images/Group 99.svg"></img>
+                  <img
+                    class="questions__item__btn__icon"
+                    width="34"
+                    height="34"
+                    src="./images/Group_99.svg"
+                    alt="btn"
+                  />
                 </button>
               </div>
               <p class="questions__item__content">
@@ -535,23 +536,74 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-container"></div>
+      <!--Hey! This is the original version
+of Simple CSS Waves-->
+
+      <div class="footter__contain">
+        <!--Content before waves-->
+        <div class="inner-footer flex">
+          <!--Just the logo.. Don't mind this-->
+
+          <h2 class="footer__title">CSS is <span>awesome.</span></h2>
+        </div>
+
+        <!--Waves Container-->
+        <div>
+          <svg
+            class="waves"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 24 150 28"
+            preserveAspectRatio="none"
+            shape-rendering="auto"
+          >
+            <defs>
+              <path
+                id="gentle-wave"
+                d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+              />
+            </defs>
+            <g class="parallax">
+              <use
+                xlink:href="#gentle-wave"
+                x="48"
+                y="0"
+                fill="rgba(255,255,255,0.7"
+              />
+              <use
+                xlink:href="#gentle-wave"
+                x="48"
+                y="3"
+                fill="rgba(255,255,255,0.5)"
+              />
+              <use
+                xlink:href="#gentle-wave"
+                x="48"
+                y="5"
+                fill="rgba(255,255,255,0.3)"
+              />
+              <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+            </g>
+          </svg>
+        </div>
+        <!--Waves end-->
+      </div>
+      <!--Header ends-->
+
+      <!--Content starts-->
+      <div class="content flex">
+        <p class="footer__desc">© 2022 TrustPix l Privacy Policy</p>
+      </div>
+      <!--Content ends-->
     </footer>
-    <!-- <script src="./js/modal.js"></script>
-    <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"
-    ></script>
-    <script defer src="js/mobile-menu.js"></script> -->
+
     <div class="videoYoutube">
       <div class="fon" onclick="closeVideo()"></div>
       <div class="videoWithYoutube"></div>
       <p onclick="closeVideo()">&#10005;</p>
     </div>
     <script src="./js/mainText.js"></script>
-    <script src="./js/modal.js"></script>
+    <script src="./js/castom.js"></script>
     <script src="./js/openVideo.js"></script>
   </body>
 </html>
