--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                 </button>
               </div>
               <button class="prog__btn">
-                <a id='progLink' href=""
+                <a id='progLink' href="" target="_blank"
                   >View the Project <span> &#9658; </span></a
                 >
               </button>
@@ -862,18 +862,39 @@
           </div>
         </div>
       </section>
+      <section class="form-section">
+        <div class="form-container">
+          <h2 class="form__title"></h2>
+          <p class="form__description"></p>
+          <form action="" class="form">
+            <input name = 'name' type="text" placeholder="Name *">
+            <input name = 'name' type="text" placeholder="Email *">
+            <input name = 'name' type="text" placeholder="Phone">
+            <input name = 'name' type="text" placeholder="Name your business">
+            <input name = 'name' type="text" placeholder="Your current website (if any)">
+            <input name = 'name' type="text" placeholder="Ask your question
+            ">
+            <label for="">
+              <input type="file">
+            </label>
+            <label for="">
+              <input type="checkbox" name="" id="">
+            </label>
+          <button type="submit">Submit</button>
+          </form>
+          
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
-      <!--Hey! This is the original version
-of Simple CSS Waves-->
-
+   
       <div class="footter__contain">
         <!--Content before waves-->
         <div class="inner-footer flex">
           <!--Just the logo.. Don't mind this-->
 
-          <h2 class="footer__title">CSS is <span>awesome.</span></h2>
+          <!-- <h2 class="footer__title">CSS is <span>awesome.</span></h2> -->
         </div>
 
         <!--Waves Container-->
@@ -897,7 +918,7 @@ of Simple CSS Waves-->
                 xlink:href="#gentle-wave"
                 x="48"
                 y="0"
-                fill="rgba(255,255,255,0.7"
+                fill="rgba(255,255,255,0.7)"
               />
               <use
                 xlink:href="#gentle-wave"
@@ -918,10 +939,11 @@ of Simple CSS Waves-->
         <!--Waves end-->
       </div>
       <!--Header ends-->
-
+      <hr class="line">
       <!--Content starts-->
       <div class="content flex">
-        <p class="footer__desc">© 2022 TrustPix l Privacy Policy</p>
+       
+        <p class="footer__desc">&copy;Trustpix | Privacy Policy</p>
       </div>
       <!--Content ends-->
     </footer>
